--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum Vitae</title>
 </head>
+
 <body>
-    111
-    <link rel="stylesheet" href="all.css">
-    <h1>777</h1>
-    <h2>大大的惊喜，来自中国</h2>
+    <h1>Curriculum Vitae</h1>
+    <h2>Li Yi (1983-)</h2>
+    <h3>Associate Professor</h3>
+    <p>State Key Laboratory for Molecular Biology of Special Economic Animals</p>
+    <p>Institute of Special Wild Economic Animal and Plant Science</p>
+    <p>Chinese Academy of Agricultural Sciences</p>
+    <p>4899 Juye Street, Changchun, Jilin province</p>
+    <p>P.R. China 130000</p>
+
+    <h2>Education</h2>
+    <p>2013-2015 - PhD | Graduate school of Chinese Academy of Agricultural Sciences for Preventive Veterinary Medicine
+    </p>
+    <p>2005-2008 - MS | Graduate school of Chinese Academy of Agricultural Sciences for Preventive Veterinary Medicine
+    </p>
+    <p>2001-2005 - BA | Huazhong Agriculture University
+    </p>
+    <h2>Research areas</h2>
+    <p>Production of monoclonal antibodies and B-cell Epitopes research in fur-animal viral pathogens (Canine distemper
+        virus, Canine parvovirus).</p>
+    <p>Research on diagnosis kits for fur-animal (Mink, fox and raccoon-dog) pathogens.</p>
+    <p>Molecular epidemiology of fur-animal virus (Canine distemper virus, Canine Parvovirus and Aleutian mink disease
+        virus)</p>
+    <h2>Publications</h2>
+    <p><strong>Yi L</strong>,Yuening Cheng, Miao Zhang, Zhigang Cao, Mingwei Tong, Jianke Wang, Hang Zhao, Peng Lin,
+        Shipeng Cheng, Identification of a novel canine distemper virus B-cell epitope using a monoclonal antibody
+        against nucleocapsid protein, Virus Research, Volume 213, 2 February 2016, Pages 1-5, ISSN 0168-1702.</p>
+    <p>Shi P, Cao Z, Cheng Y, Cheng S, <strong>Yi L*</strong> . Identification of Linear B-Cell Epitopes on
+        Hemagglutinin Protein of Canine Distemper Virus Using Two Monoclonal Antibodies, Front Vet Sci. 2020 Feb
+        28;7:47. doi: 10.3389/fvets.2020.00047. eCollection 2020.</p>
+    <p><strong>Yi L</strong>, Cheng S, Xu H, Wang J, Cheng Y, Yang S, Luo B. Development of a combined canine distemper
+        virus specific RT-PCR protocol for the differentiation of infected and vaccinated animals (DIVA) and genetic
+        characterization of the hemagglutinin gene of seven Chinese strains demonstrated in dogs. J Virol Methods. 2012
+        Jan;179(1):281-7. doi: 10.1016/j.jviromet.2011.11.011. Epub 2011 Nov 18. PubMed PMID: 22108430.</p>
+    <p><strong>Yi L,</strong>, Tong M, Cheng Y, Song W, Cheng S. Phylogenetic Analysis of Canine Parvovirus VP2 Gene in
+        China. Transbound Emerg Dis. 2014 Sep 11. doi: 10.1111/tbed.12268. [Epub ahead of print] PubMed PMID: 25209922.
+    </p>
+    <p><strong>Yi L,</strong>, Cheng Y, Zhang M, Cao Z, Tong M, Cheng S, Yan X. Identification of a novel Aleutian mink
+        disease virus B-cell epitope using a monoclonal antibody against VP2 protein. Virus Res. 2016 Sep 2;223:39-42.
+        doi: 10.1016/j.virusres.2016.06.014. Epub 2016 Jun 25. PubMed PMID: 27354304.</p>
+    <p><strong>Yi L,</strong>, Cheng S. Preparation and Identification of a Single-chain Variable Fragment Antibody
+        Against Canine Distemper Virus. Monoclon Antib Immunodiagn Immunother. 2015 Aug;34(4):228-32. doi:
+        10.1089/mab.2015.0008. PubMed PMID:26301925.</p>
+    <p><strong>Yi L,</strong>, Cheng S. A monoclonal antibody against truncated N protein (aa 277-471) of canine
+        distemper virus. Monoclon Antib Immunodiagn Immunother. 2014 Feb;33(1):52-6. doi: 10.1089/mab.2013.0066. PubMed
+        PMID: 24555938.</p>
+    <p><strong>Yi L,</strong>, Xu H, Wang J, Cheng Y, Zhang H, Yan X, Cheng S. Complete Nucleotide Sequence of Canine
+        Distemper Virus CDV-PS, Isolated from Dogs in China. Genome Announc. 2013 May 16;1(3). pii: e00232-13. doi:
+        10.1128/genomeA.00232-13. PubMed PMID: 23682141; PubMed Central PMCID: PMC3656203.</p>
+    <p><strong>Yi L,</strong>, Yi L, Cheng S, Wang Y, Wang J, Sun J, Zhang Q, Xu X. Inhibition of canine distemper virus
+        replication by blocking pyrimidine nucleotide synthesis with A77 1726, the active metabolite of the
+        anti-inflammatory drug leflunomide. J Gen Virol. 2021 Jan 8. doi: 10.1099/jgv.0.001534. Online ahead of print.
+    </p>
+    <p>Li S, <strong>Yi L,</strong>, Cao Z, Cheng Y, Tong M, Wang J, Lin P, Cheng S. Identification of linear B-cell
+        epitopes on the phosphoprotein of canine distemper virus using four monoclonal antibodies. Virus Res. 2018 Sep
+        15;257:52-56. doi:10.1016/j.virusres.2018.08.021. Epub 2018 Sep 10. PubMed PMID: 30213628.</p>
+    <p>Tong M, <strong>Yi L,</strong>, Sun N, Cheng Y, Cao Z, Wang J, Li S, Lin P, Sun Y, Cheng S. Quantitative Analysis
+        of Cellular Proteome Alterations in CDV-Infected Mink Lung Epithelial Cells. Front Microbiol. 2017 Dec
+        22;8:2564. doi:10.3389/fmicb.2017.02564. eCollection 2017. PubMed PMID: 29312244; PubMed Central PMCID:
+        PMC5743685.</p>
+    <p>Yang Y, Tong M, <strong>Yi L,</strong>, Cheng Y, Zhang M, Cao Z, Wang J, Lin P, Cheng S. Identification and
+        characterization of the toll-like receptor 8 gene in the Chinese raccoon dog (Nyctereutes procyonoides). Immunol
+        Lett. 2016 Oct;178:50-60. doi: 10.1016/j.imlet.2016.07.012. Epub 2016 Jul 29. PubMed PMID: 27481482.</p>
+
+
 </body>
+
 </html>
