--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
         virus specific RT-PCR protocol for the differentiation of infected and vaccinated animals (DIVA) and genetic
         characterization of the hemagglutinin gene of seven Chinese strains demonstrated in dogs. J Virol Methods. 2012
         Jan;179(1):281-7. doi: 10.1016/j.jviromet.2011.11.011. Epub 2011 Nov 18. PubMed PMID: 22108430.</p>
-    <p><strong>Yi L,</strong>, Tong M, Cheng Y, Song W, Cheng S. Phylogenetic Analysis of Canine Parvovirus VP2 Gene in
+    <p><strong>Yi L</strong>, Tong M, Cheng Y, Song W, Cheng S. Phylogenetic Analysis of Canine Parvovirus VP2 Gene in
         China. Transbound Emerg Dis. 2014 Sep 11. doi: 10.1111/tbed.12268. [Epub ahead of print] PubMed PMID: 25209922.
     </p>
-    <p><strong>Yi L,</strong>, Cheng Y, Zhang M, Cao Z, Tong M, Cheng S, Yan X. Identification of a novel Aleutian mink
+    <p><strong>Yi L</strong>, Cheng Y, Zhang M, Cao Z, Tong M, Cheng S, Yan X. Identification of a novel Aleutian mink
         disease virus B-cell epitope using a monoclonal antibody against VP2 protein. Virus Res. 2016 Sep 2;223:39-42.
         doi: 10.1016/j.virusres.2016.06.014. Epub 2016 Jun 25. PubMed PMID: 27354304.</p>
-    <p><strong>Yi L,</strong>, Cheng S. Preparation and Identification of a Single-chain Variable Fragment Antibody
+    <p><strong>Yi L</strong>, Cheng S. Preparation and Identification of a Single-chain Variable Fragment Antibody
         Against Canine Distemper Virus. Monoclon Antib Immunodiagn Immunother. 2015 Aug;34(4):228-32. doi:
         10.1089/mab.2015.0008. PubMed PMID:26301925.</p>
-    <p><strong>Yi L,</strong>, Cheng S. A monoclonal antibody against truncated N protein (aa 277-471) of canine
+    <p><strong>Yi L</strong>, Cheng S. A monoclonal antibody against truncated N protein (aa 277-471) of canine
         distemper virus. Monoclon Antib Immunodiagn Immunother. 2014 Feb;33(1):52-6. doi: 10.1089/mab.2013.0066. PubMed
         PMID: 24555938.</p>
-    <p><strong>Yi L,</strong>, Xu H, Wang J, Cheng Y, Zhang H, Yan X, Cheng S. Complete Nucleotide Sequence of Canine
+    <p><strong>Yi L</strong>, Xu H, Wang J, Cheng Y, Zhang H, Yan X, Cheng S. Complete Nucleotide Sequence of Canine
         Distemper Virus CDV-PS, Isolated from Dogs in China. Genome Announc. 2013 May 16;1(3). pii: e00232-13. doi:
         10.1128/genomeA.00232-13. PubMed PMID: 23682141; PubMed Central PMCID: PMC3656203.</p>
-    <p><strong>Yi L,</strong>, Yi L, Cheng S, Wang Y, Wang J, Sun J, Zhang Q, Xu X. Inhibition of canine distemper virus
+    <p><strong>Yi L</strong>, Yi L, Cheng S, Wang Y, Wang J, Sun J, Zhang Q, Xu X. Inhibition of canine distemper virus
         replication by blocking pyrimidine nucleotide synthesis with A77 1726, the active metabolite of the
         anti-inflammatory drug leflunomide. J Gen Virol. 2021 Jan 8. doi: 10.1099/jgv.0.001534. Online ahead of print.
     </p>
-    <p>Li S, <strong>Yi L,</strong>, Cao Z, Cheng Y, Tong M, Wang J, Lin P, Cheng S. Identification of linear B-cell
+    <p>Li S, <strong>Yi L</strong>, Cao Z, Cheng Y, Tong M, Wang J, Lin P, Cheng S. Identification of linear B-cell
         epitopes on the phosphoprotein of canine distemper virus using four monoclonal antibodies. Virus Res. 2018 Sep
         15;257:52-56. doi:10.1016/j.virusres.2018.08.021. Epub 2018 Sep 10. PubMed PMID: 30213628.</p>
-    <p>Tong M, <strong>Yi L,</strong>, Sun N, Cheng Y, Cao Z, Wang J, Li S, Lin P, Sun Y, Cheng S. Quantitative Analysis
+    <p>Tong M, <strong>Yi L</strong>, Sun N, Cheng Y, Cao Z, Wang J, Li S, Lin P, Sun Y, Cheng S. Quantitative Analysis
         of Cellular Proteome Alterations in CDV-Infected Mink Lung Epithelial Cells. Front Microbiol. 2017 Dec
         22;8:2564. doi:10.3389/fmicb.2017.02564. eCollection 2017. PubMed PMID: 29312244; PubMed Central PMCID:
         PMC5743685.</p>
-    <p>Yang Y, Tong M, <strong>Yi L,</strong>, Cheng Y, Zhang M, Cao Z, Wang J, Lin P, Cheng S. Identification and
+    <p>Yang Y, Tong M, <strong>Yi L</strong>, Cheng Y, Zhang M, Cao Z, Wang J, Lin P, Cheng S. Identification and
         characterization of the toll-like receptor 8 gene in the Chinese raccoon dog (Nyctereutes procyonoides). Immunol
         Lett. 2016 Oct;178:50-60. doi: 10.1016/j.imlet.2016.07.012. Epub 2016 Jul 29. PubMed PMID: 27481482.</p>
 
