添加一个页面

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p>Chinese Academy of Agricultural Sciences</p>
     <p>4899 Juye Street, Changchun, Jilin province</p>
     <p>P.R. China 130000</p>
+    <p><a href="linzhi.html" target="_blank">LZ-8 protein</a></p>
 
     <h2>Education</h2>
     <p>2013-2015 - PhD | Graduate school of Chinese Academy of Agricultural Sciences for Preventive Veterinary Medicine
